Implement report comment