@@ -7,15 +7,19 @@ import com.dms.document.interaction.dto.UserResponse;
 import com.dms.document.interaction.enums.InteractionType;
 import com.dms.document.interaction.enums.UserDocumentActionType;
 import com.dms.document.interaction.exception.InvalidDocumentException;
+import com.dms.document.interaction.model.CommentReport;
 import com.dms.document.interaction.model.DocumentComment;
 import com.dms.document.interaction.model.DocumentInformation;
 import com.dms.document.interaction.model.UserDocumentHistory;
+import com.dms.document.interaction.repository.CommentReportRepository;
 import com.dms.document.interaction.repository.DocumentCommentRepository;
 import com.dms.document.interaction.repository.DocumentRepository;
 import com.dms.document.interaction.repository.UserDocumentHistoryRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.dao.InvalidDataAccessResourceUsageException;
 import org.springframework.data.domain.Page;
@@ -41,6 +45,7 @@ public class DocumentCommentService {
     private final DocumentNotificationService documentNotificationService;
     private final DocumentPreferencesService documentPreferencesService;
     private final UserDocumentHistoryRepository userDocumentHistoryRepository;
+    private final CommentReportRepository commentReportRepository;
 
     @Transactional(readOnly = true)
     public Page<CommentResponse> getDocumentComments(String documentId, Pageable pageable, String username) {
@@ -67,8 +72,20 @@ public class DocumentCommentService {
         // Batch fetch user data
         Map<UUID, UserResponse> userMap = batchFetchUsers(userIds);
 
-        // Build comment tree structure
-        List<CommentResponse> commentTree = buildCommentTree(allComments, userMap);
+        // Get all comment reports by the current user for this document
+        List<CommentReport> userReports = commentReportRepository.findReportsByUserAndDocument(
+                userResponse.userId(), documentId
+        );
+
+        // Create a map of comment ID to report status
+        Map<Long, CommentReport> commentReportMap = userReports.stream()
+                .collect(Collectors.toMap(
+                        CommentReport::getCommentId,
+                        report -> report
+                ));
+
+        // Build comment tree structure, including report information
+        List<CommentResponse> commentTree = buildCommentTree(allComments, userMap, commentReportMap);
 
         return new PageImpl<>(commentTree, pageable, totalComments);
     }
@@ -121,7 +138,7 @@ public class DocumentCommentService {
 
             documentPreferencesService.recordInteraction(userResponse.userId(), documentId, InteractionType.COMMENT);
         });
-        return mapToCommentResponse(savedComment, Collections.singletonMap(userResponse.userId(), userResponse));
+        return mapToCommentResponse(savedComment, Collections.singletonMap(userResponse.userId(), userResponse), Map.of());
     }
 
     @Transactional
@@ -140,7 +157,7 @@ public class DocumentCommentService {
         comment.setUpdatedAt(Instant.now());
 
         DocumentComment updatedComment = documentCommentRepository.save(comment);
-        return mapToCommentResponse(updatedComment, Collections.singletonMap(userResponse.userId(), userResponse));
+        return mapToCommentResponse(updatedComment, Collections.singletonMap(userResponse.userId(), userResponse), Map.of());
     }
 
     @Transactional
@@ -178,14 +195,17 @@ public class DocumentCommentService {
         return new HashMap<>();
     }
 
-    private List<CommentResponse> buildCommentTree(List<DocumentComment> comments, Map<UUID, UserResponse> userMap) {
+    private List<CommentResponse> buildCommentTree(
+            List<DocumentComment> comments,
+            Map<UUID, UserResponse> userMap,
+            Map<Long, CommentReport> commentReportMap) {
         // Use LinkedHashMap to maintain order
         Map<Long, CommentResponse> responseMap = new LinkedHashMap<>();
         List<CommentResponse> rootComments = new ArrayList<>();
 
         // Single pass comment tree building
         for (DocumentComment comment : comments) {
-            CommentResponse response = mapToCommentResponse(comment, userMap);
+            CommentResponse response = mapToCommentResponse(comment, userMap, commentReportMap);
             responseMap.put(comment.getId(), response);
 
             if (comment.getParentId() == null) {
@@ -214,8 +234,15 @@ public class DocumentCommentService {
 
     private CommentResponse mapToCommentResponse(
             DocumentComment comment,
-            Map<UUID, UserResponse> userMap) {
+            Map<UUID, UserResponse> userMap,
+            Map<Long, CommentReport> commentReportMap) {
         UserResponse user = userMap.get(comment.getUserId());
+
+        // Check if this comment has been reported by the current user
+        CommentReport userReport = commentReportMap.get(comment.getId());
+        boolean reportedByUser = userReport != null;
+        boolean reportResolved = reportedByUser && userReport.isResolved();
+
         return CommentResponse.builder()
                 .id(comment.getId())
                 .content(comment.getContent())
@@ -223,6 +250,8 @@ public class DocumentCommentService {
                 .createdAt(comment.getCreatedAt())
                 .updatedAt(comment.getUpdatedAt())
                 .edited(comment.isEdited())
+                .reportedByUser(reportedByUser)
+                .reportResolved(reportResolved)
                 .build();
     }
 }
